[gd_scene load_steps=14 format=3 uid="uid://dkkt57qtqbe5a"]

[ext_resource type="PackedScene" uid="uid://oqya6mraul7e" path="res://Menu/Buttons/StartButton.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://deupds7iqd2ep" path="res://Menu/background.png" id="2"]
[ext_resource type="Texture2D" uid="uid://d4de4ytx8mqso" path="res://Menu/Logo.png" id="3"]
[ext_resource type="PackedScene" path="res://Menu/Buttons/OptionsButton.tscn" id="4"]
[ext_resource type="PackedScene" path="res://fade_in/FadeIn.tscn" id="6"]
[ext_resource type="Script" path="res://Menu/title_screen.gd" id="8"]
[ext_resource type="AudioStream" uid="uid://fmgjxg4budqr" path="res://Assets/Music/Title.wav" id="8_8klbo"]
[ext_resource type="PackedScene" path="res://Menu/UISound.tscn" id="9"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbh4d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s6uua"]

[sub_resource type="Animation" id="Animation_mqui1"]
resource_name = "Background"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-143, 190), Vector2(-143, 1203)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-143, -823), Vector2(-143, 190)]
}

[sub_resource type="Animation" id="Animation_td512"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-143, 190)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-139, -823)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_unjm3"]
_data = {
"Background": SubResource("Animation_mqui1"),
"RESET": SubResource("Animation_td512")
}

[node name="Title Screen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("8")

[node name="background2" type="Sprite2D" parent="."]
position = Vector2(-139, -823)
scale = Vector2(4.47, 3.968)
texture = ExtResource("2")
offset = Vector2(160, 80)

[node name="background" type="Sprite2D" parent="."]
position = Vector2(-143, 190)
scale = Vector2(4.46973, 3.96802)
texture = ExtResource("2")
offset = Vector2(160, 80)

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 422.999
offset_bottom = 361.0
alignment = 1

[node name="Logo" type="TextureRect" parent="Menu"]
layout_mode = 2
texture = ExtResource("3")
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 25
alignment = 1

[node name="Start Game" parent="Menu/CenterRow/Buttons" instance=ExtResource("1")]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_wbh4d")
scene_to_load = "res://Scenes/House.tscn"

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource("4")]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_s6uua")

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="Menu/CenterRow/CenterContainer"]
layout_mode = 2

[node name="VersionLabel" type="Label" parent="Menu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Version INDEV v0.3
Alan, Gab, and Luka"

[node name="FadeIn" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UISound" parent="." instance=ExtResource("9")]

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(1, 2)
stream = ExtResource("8_8klbo")
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_unjm3")
}
autoplay = "Background"
speed_scale = 0.04

[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
